--- a/multiverse_market/build.gradle
+++ b/multiverse_market/build.gradle
@@ -29,6 +29,12 @@ dependencies {
     implementation 'com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:20220608.1'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+
+    implementation 'com.oracle.database.jdbc:ojdbc11:23.3.0.23.09'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 }
 
 tasks.named('test') {
