--- a/multiverse_market/src/main/resources/application.properties
+++ b/multiverse_market/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=multiverse_market
 
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=MultiverseMarketDB;integratedSecurity=false;encrypt=true;trustServerCertificate=true
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:XE
+spring.datasource.username=SYSTEM
+spring.datasource.password=Alek658_M
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.datasource.username=sa
-spring.datasource.password=12345
+spring.datasource.validation-query=SELECT 1 FROM DUAL
 
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+spring.jpa.show-sql=true
 
 logging.level.org.springframework.jdbc.core=DEBUG
